# cadreSelecteur

./: .gitignore  AGENTS.md  CadreEditeur.py  CadreSelecteur.py  CadreSelecteur.spec  README.md  __main__.py  cadreSelecteur.spec  cadreediteur.py  cadreselecteur.py  makefile  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg
CadreEditeur/: CadreEditeur.py  __init__.py  cadreediteur.py  image_editor.py  imageeditor.py  imageeditorapp.py  layer.py  layerexcluzone.py  layerimage.py  layertext.py
CadreEditeur/text/: __init__.py  tkfontchooser.py
CadreEditeur/tkfontchooser/: __init__.py  tkfontchooser.py
CadreSelecteur/: __main__.py  cadreediteur.py  cadreselecteur.py  config_loader.py  error_handler.py  exceptions.py  image_ref_manager.py  logging_config.py  path_resolver.py  selector_model.py  splash.py  ttk_theme.py  validators.py
CadreSelecteur/CadreEditeur/: editor_model.py  imageeditor.py  imageeditorapp.py  layerexcluzone.py  layerimage.py  layertext.py
CadreSelecteur/CadreEditeur/text/: __init__.py  tkfontchooser.py
CadreSelecteur/Cadres/: template.xml
CadreSelecteur/Templates/: BonneSoiree.json  cadre-audrey.json  cadre_x.json  template_1.xml  template_3.xml  template_5.xml
CadreSelecteur/Templates/BonneSoiree/: BonneSoiree.json  BonneSoiree.xml
CadreSelecteur/Templates/BonneSoiree2/: BonneSoiree2.json  BonneSoiree2.xml
CadreSelecteur/Templates/GuiguiBorder/: GuiguiBorder.json
CadreSelecteur/Templates/cadre_blanc/: cadre_blanc.json
CadreSelecteur/Templates/noBorder/: noBorder.json  noBorder.xml
CadreSelecteur/Templates/noBorderText/: noBorderText.json
CadreSelecteur/Templates/no_cadre/: no_cadre.json
CadreSelecteur/Templates/no_cadre_txt/: no_cadre_txt.json
CadreSelecteur/i18n/: __init__.py  en.json  fr.json  translator.py
CadreSelecteur/resources/: config.json  en.json  fr.json
Cadres/: template.xml
Docs/: 00_START_HERE.md  ORGANISATION_COMPLETE.md  QUICK_START.md
Docs/Architecture/: 00_OVERVIEW.md
Docs/Guides/: INTEGRATION_GUIDE_PHASE2.md
Docs/INDEX/: README.md
Docs/Index/: SITEMAP.md  SUMMARY.md
Docs/Rapports/: ANALYSIS.md  CHANGESET.md  MULTIPROCESSING_CORRECTION_RESUME.md  MULTIPROCESSING_FIX.md  REFACTORING_MVP_REPORT.md  SPLASH_FIX.md  SPLASH_VRAIE_SOLUTION.md  SUMMARY.md
Templates/: cadre.xcf  cadre4.xcf
tests/: test_basic.py  test_cadreselecteur.py  test_error_handling.py  test_i18n.py  test_i18n_resources_priority.py  test_image_ref_manager.py  test_layer_models.py  test_models_mvc.py  test_path_resolver.py  test_ttk_theme.py  test_validators.py
