[metadata]
name = CadreSelecteur
version = attr: CadreSelecteur.__version__
description = Application pour sélectionner et éditer les cadres du photomaton PiBooth
author = Cot Nicolas
author_email = cot.nicolas@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nico31Fr/cadreSelecteur
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    Pillow==11.3.0
    matplotlib==3.10.6

include_package_data = True

[options.package_data]
CadreSelecteur =
    Fonts/*
    resources/*
    Cadres/*
    Templates/*

[flake8]
max-line-length = 120
