[metadata]
name = CadreSelecteur
version = attr: CadreSelecteur.__version__
description = Application pour sélectionner et éditer les cadres du photomaton PiBooth
author = Cot Nicolas
author_email = cot.nicolas@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nico31Fr/cadreSelecteur
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    Pillow==11.3.0
    matplotlib==3.10.7
    numpy==2.3.3
    fontTools==4.60.1
    contourpy==1.3.3
    cycler==0.12.1
    kiwisolver==1.4.9
    packaging==25.0
    pyparsing==3.2.5
    python-dateutil==2.9.0.post0
    six==1.17.0

include_package_data = True

[options.package_data]
CadreSelecteur =
    Fonts/*
    resources/*
    Cadres/*
    Templates/*

[flake8]
max-line-length = 120
